Update Task 1- Prediction using Supervised ML.ipynb

--- a/Task 1- Prediction using Supervised ML.ipynb
+++ b/Task 1- Prediction using Supervised ML.ipynb
@@ -154,11 +154,11 @@
    "source": [
     "#reading data from the url\n",
     "\n",
-    "url = \"http://bit.ly/w-data\" \n",
+    "url = \"https://raw.githubusercontent.com/AdiPersonalWorks/Random/master/student_scores%20-%20student_scores.csv\" \n",
     "data = pd.read_csv(url)\n",
     "\n",
     "print(\"Here is the Data\")\n",
-    "data.head(25)"
+    "data.head(10)"
    ]
   },
   {
